# 38k_ir

./: CMakeLists.txt  LICENSE  README.md  nec_infrared.c  nec_infrared.h  nec_rx.c  nec_rx.h  nec_tx.c  nec_tx.h  panasonic_rx.c  panasonic_rx.h  panasonic_tx.c  panasonic_tx.h  samsung_rx.c  samsung_rx.h
example/: CMakeLists.txt  hw.c  hw.h  main.c  ring.c  ring.h
test/: CMakeLists.txt  main.c  main.cpp  panatest.c  rxtx_test.cpp  samsung_test.c  test.c
